Added module-info for the whole solution